[gd_scene load_steps=3 format=2]

[ext_resource path="res://Modules/Main.gd" type="Script" id=1]
[ext_resource path="res://Modules/Record And Play Audio File/SpellingSoundHBoxContainer.tscn" type="PackedScene" id=2]

[node name="Main" type="Node"]
script = ExtResource( 1 )
audio_record_scene = ExtResource( 2 )

[node name="SpawnSceneATimer" type="Timer" parent="."]
wait_time = 100.0
one_shot = true
autostart = true

[node name="SpawnSceneBTimer" type="Timer" parent="."]
wait_time = 100.0
one_shot = true

[connection signal="timeout" from="SpawnSceneATimer" to="." method="_on_SpawnSceneATimer_timeout"]
[connection signal="timeout" from="SpawnSceneBTimer" to="." method="_on_SpawnSceneBTimer_timeout"]
